@@ -16,6 +16,8 @@ import static uk.gov.hmcts.opal.config.Constants.DRAFT_ACCOUNTS_URI;
 import uk.gov.hmcts.opal.steps.BaseStepDef;
 import static uk.gov.hmcts.opal.steps.BearerTokenStepDef.getToken;
 import uk.gov.hmcts.opal.utils.DraftAccountUtils;
+import net.serenitybdd.core.Serenity;
+import io.restassured.response.Response;
 
 public class DraftAccountGetSteps extends BaseStepDef {
     @When("I get the draft account {string}")
@@ -61,7 +63,7 @@ public class DraftAccountGetSteps extends BaseStepDef {
             "There should be only one draft account but found multiple: "
                 + DraftAccountUtils.getAllDraftAccountIds()
         );
-        String draftAccountId = DraftAccountUtils.getAllDraftAccountIds().get(0);
+        String draftAccountId = DraftAccountUtils.getAllDraftAccountIds().getFirst();
         SerenityRest
             .given()
             .header("Authorization", "Bearer " + getToken())
@@ -79,7 +81,7 @@ public class DraftAccountGetSteps extends BaseStepDef {
             "There should be only one draft account but found multiple: "
                 + DraftAccountUtils.getAllDraftAccountIds()
         );
-        String draftAccountId = DraftAccountUtils.getAllDraftAccountIds().get(0);
+        String draftAccountId = DraftAccountUtils.getAllDraftAccountIds().getFirst();
         SerenityRest
             .given()
             .header("Authorization", "Bearer " + getToken())
@@ -95,6 +97,36 @@ public class DraftAccountGetSteps extends BaseStepDef {
             String actual = then().extract().body().jsonPath().getString(key);
             assertEquals(expected, actual, "Values are not equal for field '" + key + "'");
         }
+    }
+
+    @When("I get the single created draft account without asserting the body")
+    public void getSingleDraftAccountWithoutAssertingBody() {
+
+        assertEquals(1,
+            DraftAccountUtils.getAllDraftAccountIds().size(),
+            "There should be only one draft account but found multiple: "
+                + DraftAccountUtils.getAllDraftAccountIds()
+        );
+
+        String draftAccountId = DraftAccountUtils.getAllDraftAccountIds().getFirst();
+
+        Object tokenObj = Serenity.sessionVariableCalled("BEARER_TOKEN");
+        String token = tokenObj == null ? getToken() : String.valueOf(tokenObj);
+
+        var given = SerenityRest
+            .given()
+            .accept("*/*")
+            .contentType("application/json");
+
+        if (token != null && !token.isBlank()) {
+            given.header("Authorization", "Bearer " + token);
+        }
+
+        Response resp = given
+            .when()
+            .get(getTestUrl() + DRAFT_ACCOUNTS_URI + "/" + draftAccountId);
+
+        Serenity.setSessionVariable("LATEST_RESPONSE").to(resp);
     }
 
     @When("I get the draft accounts filtering on the Business unit {string} then the response contains")
@@ -348,5 +380,32 @@ public class DraftAccountGetSteps extends BaseStepDef {
             .when()
             .get(getTestUrl() + DRAFT_ACCOUNTS_URI + "?business_unit=" + filter);
 
+    }
+
+    @When("I get the draft accounts")
+    public void getDraftAccounts() {
+        // pick up bearer token if set in session, otherwise fall back to getToken()
+        Object tokenObj = Serenity.sessionVariableCalled("BEARER_TOKEN");
+        String token = tokenObj == null ? getToken() : String.valueOf(tokenObj);
+
+        var given = SerenityRest.given().contentType("application/json").accept("*/*");
+
+        if (token != null && !token.isBlank()) {
+            given.header("Authorization", "Bearer " + token);
+        }
+
+        // support optional custom header set by tests (e.g. x-user-ip)
+        Object hdrName = Serenity.sessionVariableCalled("CUSTOM_HEADER_NAME");
+        Object hdrValue = Serenity.sessionVariableCalled("CUSTOM_HEADER_VALUE");
+        if (hdrName != null && hdrValue != null) {
+            given.header(String.valueOf(hdrName), String.valueOf(hdrValue));
+            // clear after use to avoid leaking across scenarios
+            Serenity.setSessionVariable("CUSTOM_HEADER_NAME").to(null);
+            Serenity.setSessionVariable("CUSTOM_HEADER_VALUE").to(null);
+        }
+
+        Response resp = given.when().get(getTestUrl() + DRAFT_ACCOUNTS_URI);
+        // store latest response for later assertions / steps
+        Serenity.setSessionVariable("LATEST_RESPONSE").to(resp);
     }
 }
